test/spec/loop.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop.wast
(;; STDOUT ;;;
assert_invalid error:
  out/third_party/testsuite/loop.wast:226:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i32 (result i32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:226:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i32 (result i32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:230:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-i64 (result i64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:230:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-i64 (result i64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:234:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f32 (result f32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:234:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f32 (result f32) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:238:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-empty-f64 (result f64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:238:11: type stack at end of function is 0. expected 1
  (module (func $type-empty-f64 (result f64) (loop)))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:243:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:243:11: type stack at end of function is 0. expected 1
  (module (func $type-value-void-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:250:6: type stack at end of loop is 1. expected 0
    (loop (f32.const 0))
     ^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:249:11: type stack size too small at function. got 0, expected at least 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  out/third_party/testsuite/loop.wast:249:11: type stack at end of function is 0. expected 1
  (module (func $type-value-num-vs-num (result i32)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
42/42 tests passed.
;;; STDOUT ;;)
